exclude intellij dir from RAT analysis
git-svn-id: https://svn.terracotta.org/repo/forge/projects/statistics/trunk@37857 591de9ec-d6d5-471c-8416-afe4a41b277d

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
           </licenseFamilies>
           <excludes>
             <exclude>nb-configuration.xml</exclude>
+            <exclude>.idea/**/*</exclude>
           </excludes>
         </configuration>
         <executions>
