--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,14 @@
   <parent>
     <artifactId>forge-parent</artifactId>
     <groupId>org.terracotta.forge</groupId>
-    <version>3.0-SNAPSHOT</version>
+    <version>3.0</version>
     <relativePath/>
   </parent>
 
   <name>Terracotta Statistics</name>
   <groupId>org.terracotta.internal</groupId>
   <artifactId>statistics</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <dependencies>
