--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <artifactId>forge-parent</artifactId>
     <groupId>org.terracotta.forge</groupId>
-    <version>3.0-SNAPSHOT</version>
+    <version>3.0</version>
     <relativePath/>
   </parent>
 
