Add SCM info for reelase publishing.
git-svn-id: https://svn.terracotta.org/repo/forge/projects/statistics/trunk@39836 591de9ec-d6d5-471c-8416-afe4a41b277d

--- a/pom.xml
+++ b/pom.xml
@@ -115,4 +115,9 @@
       <url>http://www.terracotta.org/download/reflector/releases</url>
     </pluginRepository> 
   </pluginRepositories>
+
+  <scm>
+    <connection>scm:svn:http://svn.terracotta.org/svn/forge/projects/statistics/trunk</connection>
+    <developerConnection>scm:svn:https://svn.terracotta.org/svn/forge/projects/statistics/trunk</developerConnection>
+  </scm>
 </project>
