[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.terracotta.org/repo/forge/projects/statistics/trunk@39850 591de9ec-d6d5-471c-8416-afe4a41b277d

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <name>Terracotta Statistics</name>
   <groupId>org.terracotta.internal</groupId>
   <artifactId>statistics</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <dependencies>
@@ -117,7 +117,7 @@
   </pluginRepositories>
 
   <scm>
-    <connection>scm:svn:http://svn.terracotta.org/svn/forge/projects/statistics/tags/statistics-1.0.1</connection>
-    <developerConnection>scm:svn:https://svn.terracotta.org/repo/forge/projects/statistics/tags/statistics-1.0.1</developerConnection>
+    <connection>scm:svn:http://svn.terracotta.org/svn/forge/projects/statistics/trunk</connection>
+    <developerConnection>scm:svn:https://svn.terracotta.org/repo/forge/projects/statistics/trunk</developerConnection>
   </scm>
 </project>
