--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
   <packaging>jar</packaging>
 
   <properties>
+    <java.version>1.6</java.version>
   </properties>
 
   <dependencies>
@@ -93,6 +94,15 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
