--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.terracotta</groupId>
   <artifactId>statistics</artifactId>
-  <version>1.4-SNAPSHOT</version>
+  <version>1.4.0</version>
   <packaging>jar</packaging>
 
   <name>Terracotta Statistics</name>
