--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <name>Terracotta Statistics</name>
   <description>A statistics framework used inside Ehcache and the Terracotta products</description>
-  <url>https://github.com/Terracotta-OSS/terracotta-management/</url>
+  <url>https://github.com/Terracotta-OSS/statistics</url>
 
   <prerequisites>
     <maven>3.0.5</maven>
@@ -233,6 +233,17 @@
               <head>Implementation Note:</head>
             </tag>
           </tags>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>org.terracotta.statistics</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
         </configuration>
       </plugin>
       <plugin>
