--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.terracotta</groupId>
   <artifactId>statistics</artifactId>
@@ -19,7 +19,7 @@
   <packaging>jar</packaging>
 
   <name>Terracotta Statistics</name>
-  <description> A statistics framework used inside Ehcache and the Terracotta products</description>
+  <description>A statistics framework used inside Ehcache and the Terracotta products</description>
   <url>https://github.com/Terracotta-OSS/terracotta-management/</url>
 
   <prerequisites>
@@ -141,7 +141,7 @@
               <patterns>
                 <pattern>http://creativecommons.org/publicdomain/zero/1.0/</pattern>
               </patterns>
-            </license>            
+            </license>
           </licenses>
           <licenseFamilies>
             <licenseFamily implementation="org.apache.rat.license.Apache20LicenseFamily"/>
