--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,19 @@
           <artifactId>versions-maven-plugin</artifactId>
           <version>2.5</version>
         </plugin>
+        <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>1.6.6</version>
+          <extensions>true</extensions>
+          <configuration>
+            <!-- The Base URL of Nexus instance where we want to stage -->
+            <nexusUrl>https://oss.sonatype.org</nexusUrl>
+            <!-- The server "id" element from settings to use authentication from -->
+            <serverId>sonatype-nexus-staging</serverId>
+            <skipNexusStagingDeployMojo>${maven.deploy.skip}</skipNexusStagingDeployMojo>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -214,6 +227,10 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
@@ -229,16 +246,8 @@
 
   <profiles>
     <profile>
-      <id>deploy-sonatype</id>
-      <distributionManagement>
-        <repository>
-          <id>sonatype-nexus-staging</id>
-          <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-        </repository>
-      </distributionManagement>
-    </profile>
-    <profile>
-      <!-- Profile to sign artifacts with a PGP key (using GPG). -->
+      <!-- Profile to sign artifacts with a PGP key (using GPG).
+           Must be activated for sonatype releases -->
       <id>sign-artifacts</id>
       <activation>
         <property>
@@ -272,9 +281,8 @@
 
   <distributionManagement>
     <repository>
-      <id>terracotta-os-releases</id>
-      <name>Terracotta OS Releases Repository</name>
-      <url>${terracotta-os-releases-url}</url>
+      <id>sonatype-nexus-staging</id>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
     </repository>
     <snapshotRepository>
       <id>terracotta-os-snapshots</id>
